[gd_scene load_steps=16 format=2]

[ext_resource path="res://Menu/Title Screen/title_screen.gd" type="Script" id=1]
[ext_resource path="res://Menu/Buttons/OptionsButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menu/Buttons/ExitButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/FadeIn/FadeIn.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/Buttons/ContinueButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/Buttons/NewGameButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Godot/Music/Souls and Blood - Saint of the Damned.mp3" type="AudioStream" id=7]
[ext_resource path="res://Godot/Fonts/OptimusPrincepsSemiBold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Godot/SFX/CURSOL_SELECT.wav.mp3" type="AudioStream" id=9]
[ext_resource path="res://Godot/Fonts/OptimusPrinceps.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Godot/SFX/CURSOL_OK.wav.mp3" type="AudioStream" id=11]
[ext_resource path="res://Menu/FadeIn/TitleFadeIn.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=1]
size = 350
outline_size = 2
outline_color = Color( 1, 0.423529, 0, 1 )
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 1
outline_color = Color( 1, 0.423529, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 40
use_filter = true
extra_spacing_top = 100
font_data = ExtResource( 10 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Node2D" parent="."]

[node name="TitleScreenMusic" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 7 )
volume_db = -5.0

[node name="HitSound" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 9 )

[node name="Select" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 11 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 1006.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="Label" parent="Menu"]
margin_right = 1680.0
margin_bottom = 525.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "Omen"
align = 1
valign = 1
uppercase = true

[node name="Label" type="Label" parent="Menu/Logo"]
margin_top = 400.0
margin_right = 1680.0
margin_bottom = 499.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "Soul of Shadow"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CentreRow" type="HBoxContainer" parent="Menu"]
margin_top = 527.0
margin_right = 1680.0
margin_bottom = 779.0
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Menu/CentreRow"]
margin_left = 660.0
margin_right = 1020.0
margin_bottom = 252.0
alignment = 1

[node name="ContinueButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 5 )]
focus_neighbour_bottom = NodePath("../NewGameButton")
size_flags_vertical = 9
scene_to_load = "res://World/World.tscn"

[node name="NewGameButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 6 )]
margin_top = 64.0
margin_bottom = 124.0
focus_neighbour_top = NodePath("../ContinueButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
size_flags_vertical = 9
scene_to_load = "res://World/World.tscn"

[node name="OptionsButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 2 )]
margin_top = 128.0
margin_bottom = 188.0
focus_neighbour_top = NodePath("../NewGameButton")
focus_neighbour_bottom = NodePath("../ExitButton")
size_flags_horizontal = 9

[node name="ExitButton" parent="Menu/CentreRow/Buttons" instance=ExtResource( 3 )]
margin_top = 192.0
margin_bottom = 252.0
focus_neighbour_top = NodePath("../OptionsButton")
size_flags_horizontal = 9
scene_to_load = ""

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 783.0
margin_right = 1680.0
margin_bottom = 926.0
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Omen: Soul of Shadow & 2021 Dinnonix Software, Inc. Version 1.0 "
align = 1

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
visible = false

[node name="TitleFadeIn" parent="." instance=ExtResource( 13 )]
visible = false

[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_mouse_entered"]
[connection signal="pressed" from="Menu/CentreRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="pressed" from="Menu/CentreRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="pressed" from="Menu/CentreRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="Menu/CentreRow/Buttons/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="Menu/CentreRow/Buttons/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="fade_in_finished" from="TitleFadeIn" to="." method="_on_TitleFadeIn_fade_in_finished"]
